<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="5dp"
    app:cardElevation="1dp"
    app:cardMaxElevation="1dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">


    <RelativeLayout
        android:id="@+id/cardRelative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/userIcon"
            android:layout_width="36dp"
            android:layout_height="29dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/userIcon"
            android:padding="5dp" />

        <TextView
            android:id="@+id/postContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/userName"

            android:layout_alignParentEnd="true"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/userIcon"
            android:drawablePadding="2dp"
            android:hint="@string/post_content"
            android:textColorHint="#A6A1A1" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="21dp"

            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"

            android:layout_toEndOf="@+id/userIcon"
            android:hint="@string/userName"
            android:textColor="@color/black"
            android:textColorHighlight="@color/black"
            android:textColorHint="#A6A1A1" />

        <TextView
            android:id="@+id/postTime"
            android:layout_width="138dp"
            android:layout_height="19dp"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"


            android:layout_toEndOf="@+id/userName"
            android:hint="@string/post_time"
            android:textColor="@color/grey_600"
            android:textColorHint="@color/grey_400" />

    </RelativeLayout>


</androidx.cardview.widget.CardView>