<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".search.SearchActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#00000000"
        android:backgroundTint="#00000000"
        android:gravity="center|center_horizontal"
        app:elevation="@dimen/cardview_compat_inset_shadow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <SearchView
            android:id="@+id/search_view"
            android:layout_width="306dp"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_corner_searchview"
            android:backgroundTint="#EEF3F4"
            android:commitIcon="?android:attr/actionModeWebSearchDrawable"
            android:gravity="center_vertical"
            android:queryHint="@string/search_prompt"
            app:queryBackground="@drawable/rounded_corner_searchview"
            app:submitBackground="@drawable/rounded_corner_searchview" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_conversion_absoluteHeight="0dp"
            tools:layout_conversion_absoluteWidth="0dp">

        </androidx.viewpager2.widget.ViewPager2>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tabs" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/grey_900"
        app:itemIconTint="@color/grey_100"
        app:itemTextColor="#FFFFFF"
        app:layout_anchorGravity="bottom|center"
        app:layout_constraintBaseline_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/navigation"
        tools:layout_conversion_absoluteHeight="56dp"
        tools:layout_conversion_absoluteWidth="393dp">
    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/settings"
        android:fitsSystemWindows="true"
        android:scaleType="fitCenter"
        app:layout_anchorGravity="right|center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sync"
        tools:layout_conversion_absoluteHeight="24dp"
        tools:layout_conversion_absoluteWidth="24dp"
        tools:srcCompat="@android:drawable/ic_popup_sync" />

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/avatar"
        android:fitsSystemWindows="true"
        android:foreground="@drawable/rounded_corner_imageview"
        android:rotationY="180"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar"
        tools:layout_conversion_absoluteHeight="168dp"
        tools:layout_conversion_absoluteWidth="172dp"
        tools:targetApi="m"
        tools:visibility="visible" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabTextColor="@color/white"
        tools:ignore="SpeakableTextPresentCheck"
        tools:layout_conversion_absoluteHeight="48dp"
        tools:layout_conversion_absoluteWidth="0dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/write_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="15dp"
        android:clickable="true"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>